Update XGBoost and Decision Trees, BOM Data.ipynb

--- a/Box Office Predictions Project/Enhancing The DF & Predictions/XGBoost and Decision Trees, BOM Data.ipynb
+++ b/Box Office Predictions Project/Enhancing The DF & Predictions/XGBoost and Decision Trees, BOM Data.ipynb
@@ -1110,7 +1110,7 @@
    "metadata": {},
    "source": [
     "# Almost 3% Higher, Not Bad\n",
-    "I will scrape Budget, Genre and Running Times and return to this project in the future. I may then also be able to narrow the box office gross categories. Modest results but a fun a project nonetheless!"
+    "I will categorize the ditributors into groups to reduce the feature variance, then scrape the Budget, Genre and Running Times and return to this project in the future. I may then also be able to narrow the box office gross categories. Modest results but a fun a project nonetheless!"
    ]
   },
   {
