Update XGBoost and Decision Trees, BOM Data.ipynb

--- a/Box Office Predictions Project/Enhancing The DF & Predictions/XGBoost and Decision Trees, BOM Data.ipynb
+++ b/Box Office Predictions Project/Enhancing The DF & Predictions/XGBoost and Decision Trees, BOM Data.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "pd.set_option('display.max_rows', 500)\n",
     "\n",
-    "df = pd.read_csv('/Users/darragh/Python/Selenium & Sentiment/Selenium, Vault ai Scraper/1980_2020.csv')\n",
+    "df = pd.read_csv('1980_2020.csv')\n",
     "df = df.sort_index(ascending=False)\n",
     "\n",
     "# Don't Need This Estimated Gross Boolean Column\n",
@@ -935,7 +935,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('/Users/darragh/Python/Selenium & Sentiment/Selenium, Vault ai Scraper/Cleaned_1980_2020.csv')"
+    "df.to_csv('Cleaned_1980_2020.csv')"
    ]
   },
   {
