--- a/Requests - Categorising Movie or TV Series By Keyword/Requests - IMDb Keyword Matched Titles - .ipynb
+++ b/Requests - Categorising Movie or TV Series By Keyword/Requests - IMDb Keyword Matched Titles - .ipynb
@@ -23,6 +23,7 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n"
     "import pandas as pd\n",
     "import requests as r\n",
     "import re\n",
